--- a/index.html
+++ b/index.html
@@ -43,12 +43,56 @@
 			<h4>Our Solutions</h4> 
 			
 			<!-- INSERT TABS HERE -->
+			<div id="tabs">
+				<ul>
+					<li><a href="#tabs-1">vProspect 2.0</a></li>
+					<li><a href="#tabs-2">vConvert 2.0</a></li>
+					<li><a href="#tabs-3">vRetain 1.0</a></li>
+				</ul>
+				<div id="tabs-1">
+					<img src="./images/logo_vprospect.gif">
+					Define and research your target audience, define your strategy to reach that audience and present a strong and memorable brand to that audience.
+				</div>
+				<div id="tabs-2">
+					<img src="./images/logo_vconvert.gif">
+					Create a highly user-friendly and easy-to-navigate information architecture that will help your prospects interact with the company on a highly interactive level.
+				</div>
+				<div id="tabs-3">
+					<img src="./images/logo_vretain.gif">
+					Build on existing customer relationships to improve productivity and maximize customer loyalty, while growing revenues.
+				</div>
+			</div>
+
 		</section>
 		
 		<section id="testimonials" class="five columns">
 			<h4>Client Testimonials</h4>
 
 			<!-- INSERT ACCORDION HERE -->
+			<div id="accordion">
+				<h3>Testimonial 1</h3>
+				<div>
+					<p>
+						Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products. It is this commitment that has increased both our income and exposure exponentially.
+					</p>
+					<p>
+						Iona Ford <br>
+						President <br>
+						Chevy Dealers Association <br>
+					</p>
+				</div>
+				<h3>Testimonial 2</h3>
+				<div>
+					<p>
+						Incredible results from an incredible effort by the Vecta Corporation team! We are very pleased with the business benefits we have rceived by working with them.
+					</p>
+					<p>
+						Robin Banks <br>
+						CEO <br>
+						Profits Financial, Inc. <br>
+					</p>
+				</div>
+			</div>
 		</section>
 	</main>
 
@@ -61,5 +105,9 @@
 		});
 	</script>
 	<script src="./js/main.js"></script>
+	<script>
+		$("#tabs").tabs();
+		$("#accordion").accordion();
+	</script>
 </body>
 </html>
