about us complete

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 			$('#responsive-menu').mobileMenu();
 		});
 	</script>
-	<script src="./js/main.js"></script>
+
 	<script>
+		$("#responsive-menu a").tooltip();
 		$("#tabs").tabs();
 		$("#accordion").accordion();
 	</script>
