--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,8 @@
 	<style>
 		.container { padding-bottom: 4rem; }
 		#tabs { display: flex; }
-		#tabs ul { min-width: 100px; margin-right: 0.5rem; }
+		#tabs ul { min-width: 100px; min-height: 300px; margin-right: 0.5rem; }
+		#tabs ul li { width: 100%; }
 		#tabs li a { padding: 0.5rem; display: inline-block; width: 100%; }
 		li.ui-tabs-active { background: #007fff; color: white }
 		li.ui-tabs-active a { color: white }
