--- a/solutions.html
+++ b/solutions.html
@@ -62,7 +62,7 @@
 					<li>Define expansion plans and strategies.</li>
 					<li>Implement Search Engine Optimization of all Online materials.</li>
 				</ul>
-				<a id="back2top">Back to top</a>
+				<a class="back2top">Back to top</a>
 			</div>
 			
 			<div id="vConvert">
@@ -76,7 +76,7 @@
 					<li>Develop any applicable back-end programs to facilitate user interaction with the company and offerings on a highly functional level to allow any kind of online transactions and a completely centralized information collection and access point, accessible from any location.</li>
 					<li>Create an architecture to display the site content and information in a logical and easy to access manner. Facilitating thereby the desired ease, for the user to find what they are looking for quickly and easily. Allowing the user to focus on the subject at hand rather than searching for information on the site.</li>
 				</ul>
-				<a id="back2top">Back to top</a>
+				<a class="back2top">Back to top</a>
 			</div>
 			
 			<div id="vRetain">
@@ -87,7 +87,7 @@
 					<li>Collect crucial information, data and statistics that allow a company to keep in touch with users in a very customized, highly targeted way.</li>
 					<li>Analyze site visitor behavior through traffic analysis, usability studies and interactive polling. Recommending and making site and application adjustments to improve usability and user experience.</li>
 				</ul>
-				<a id="back2top">Back to top</a>
+				<a class="back2top">Back to top</a>
 			</div>
 		</section>
 		
@@ -118,7 +118,7 @@
 	<script>
 		$("#responsive-menu a").tooltip();	
 		$("#testimonials").stick_in_parent();
-		$("a#back2top").on("click", function() {
+		$("a.back2top").on("click", function() {
 			$.smoothScroll();
 		});
 	</script>
